Fix: Repo tabs are hidden in Actions on Firefox

--- a/source/features/more-dropdown-links.css
+++ b/source/features/more-dropdown-links.css
@@ -3,10 +3,6 @@
 	visibility: visible !important;
 }
 
-/* Keep the dropdown on the right on non-responsive pages #3548 */
-main > :first-child {
-	position: relative;
-}
 
 /* Only show the divider if there are other items above it */
 .UnderlineNav-actions [hidden] + .dropdown-divider {
